# SlicerScriptEditor

./: CMakeLists.txt  LICENSE  README.md  temp.jason
PYFile/: CMakeLists.txt  PyFile.py
PyFile/: CMakeLists.txt  PyFile.py  SavePyFile.py  ViewContextMenu.py
ScriptEditor/: CMakeLists.txt  ScriptEditor.py
ScriptEditor/Resources/UI/: ScriptEditor.ui
ScriptEditor/Resources/monaco-editor/: package-lock.json
ScriptEditor/ScriptEditorLib/: ScriptEditorSubjectHierarchyPlugin.py
SlicerEditor/: CMakeLists.txt  SlicerEditor.py
SlicerEditor/Resources/UI/: SlicerEditor.ui
SlicerEditor/Resources/monaco-editor/: index.html
SlicerEditor/SlicerEditor/: SlicerEditor.py
SlicerEditor/SlicerEditor/Resources/monaco-editor/: package.json
